@@ -1,0 +1,25 @@
+
+			RELEASE FORM
+			------------
+
+OpenVMS Freeware CD
+--------------------
+
+DEVELOPER RELEASE FORM: for directory-editor "FLIST"
+
+
+	As the owner/developer of this software, I release it to be 
+	included on the OpenVMS Freeware CD-ROM.  I expect no renumerances 
+	or payments for the use of this software from Digital or Digital's 
+	customers.
+
+
+
+					Thomas Dickey (dickey@clark.net)
+					phone: 703-742-0967
+					_______________________  
+					Developer/Owner Name
+
+
+
+
